<resources>
    <string name="app_name">FoodieHub</string>
    <string name="foodiehub">FoodieHub</string>
    <string name="login_to_your_account">Login To Your Account</string>
    <string name="continue_with">Continue With</string>
    <string name="or">Or</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="design">Design By Codelamps\n Andre Rizaldi Brillianto</string>
    <string name="validation_location">To provide you with the best dining experience,\nwe need your permission to access your\ndevice\'s location. By enabling location services,\nwe can offer personalized restaurant\n recommendations, accurate delivery estimates,\nand ensure a seamless food delivery\nexperience</string>
    <string name="explore_your_favorite_food">Explore Your Favorite Food</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="demo">Testing</string>
    <string name="menu">Menu</string>
</resources>
