<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/login_photo"
        android:layout_width="129dp"
        android:layout_height="112dp"
        android:layout_marginTop="40dp"
        android:src="@drawable/g10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/foodiehub_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/foodiehub"
        android:textColor="@color/maroon"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="@id/login_photo"
        app:layout_constraintStart_toStartOf="@id/login_photo"
        app:layout_constraintTop_toBottomOf="@id/login_photo" />

    <TextView
        android:id="@+id/login_account_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_to_your_account"
        android:textColor="@color/maroon"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@id/foodiehub_login"
        app:layout_constraintStart_toStartOf="@id/foodiehub_login"
        app:layout_constraintTop_toBottomOf="@id/foodiehub_login" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilUsername"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@id/login_account_text"
        app:layout_constraintStart_toStartOf="@id/login_account_text"
        app:layout_constraintTop_toBottomOf="@id/login_account_text"
        app:startIconDrawable="@drawable/user_01">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Masukkan Username"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPassword"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        app:endIconDrawable="@drawable/eye_off"
        app:layout_constraintEnd_toEndOf="@id/tilUsername"
        app:layout_constraintStart_toStartOf="@id/tilUsername"
        app:layout_constraintTop_toBottomOf="@id/tilUsername"
        app:startIconDrawable="@drawable/lock_01">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Masukkan Password"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:id="@+id/or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/or"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tilPassword" />

    <TextView
        android:id="@+id/continue_with"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/continue_with"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@id/or"
        app:layout_constraintStart_toStartOf="@id/or"
        app:layout_constraintTop_toBottomOf="@id/or" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/facebook"
        android:layout_width="152dp"
        android:layout_height="57dp"
        android:background="@drawable/white_button"
        android:layout_marginTop="20dp"
        android:paddingLeft="15dp"
        android:drawableLeft="@drawable/facebook_3_1"
        android:text="@string/facebook"
        app:layout_constraintEnd_toStartOf="@+id/google"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/continue_with" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/google"
        android:layout_width="152dp"
        android:layout_height="57dp"
        android:layout_marginTop="20dp"
        android:drawableLeft="@drawable/google_icon_1"
        android:text="@string/google"
        android:paddingLeft="15dp"
        android:background="@drawable/white_button"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/facebook"
        app:layout_constraintTop_toBottomOf="@id/continue_with" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/login"
        android:background="@drawable/maroon_button"
        android:textColor="@color/white"
        android:layout_width="152dp"
        android:layout_height="48dp"
        android:text="Login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/facebook"
        android:layout_marginTop="25dp"/>

    <TextView
        android:id="@+id/dont_have_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Don't Have Account?"
        app:layout_constraintStart_toStartOf="@id/login"
        app:layout_constraintEnd_toEndOf="@id/login"
        app:layout_constraintTop_toBottomOf="@id/login"
        android:layout_marginTop="10dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>
